--- a/style.css
+++ b/style.css
@@ -890,3 +890,17 @@ footer > div {
 .CopyRight > p {
   font-size: clamp(0.8rem, 2.5vw, 1rem);
 }
+
+#scrollTopBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+}
